fixed overflow on mobile

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     flex-direction: row;
     min-height: 20vh;
