--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,7 @@
     justify-content: space-between;
     display: flex;
     flex-direction: row;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.6);
     padding-top: 20px;
     padding-bottom: 20px;
     margin: 0;
