--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -3,12 +3,20 @@
     justify-content: center;
     /*display: flex;*/
     min-height: 100%;
+
+    background-image: url('../../assets/background/space.jpeg');
+    position: fixed;
+    min-width: 100%;
+    min-height: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 .elon-image {
     max-width: 100%;
     padding-top: 10vh;
     padding-bottom: 10vh;
+    opacity: 70%;
 }
 
 @media only screen and (max-width: 414px) {
